Fix scrollbar view for Firefox and Opera

--- a/src/styles/global/_base.scss
+++ b/src/styles/global/_base.scss
@@ -27,7 +27,7 @@ body {
 
 a {
   color: #a3a2a8;
-  outline: $outline-color;
+  outline: #fff;
   text-decoration: none;
 }
 
