--- a/src/styles/settings/_vars.scss
+++ b/src/styles/settings/_vars.scss
@@ -1,8 +1,17 @@
-$outline-color: #fff;
-$panel-background: #272631;
-$content-background: #fafafa;
+// Text
 $album-title-color: #444;
 $main-text-color: #a3a2a8;
 $panel-title-color: #d6d5df;
+
+// Components and elements
+$panel-background: #272631;
+$content-background: #fafafa;
 $button-color: #ea5a5a;
 $thumb-margin: 10px;
+
+// Scroll bar elements
+$scroll-thumb-color: #b7b7b7;
+$scroll-track-color: #f1f1f1;
+
+// Progress bar elements
+$progress-container-color: #f5f5f5;
