--- a/src/styles/ui/_panel.scss
+++ b/src/styles/ui/_panel.scss
@@ -8,6 +8,7 @@
   overflow: hidden;
   transition: all 0.4s, opacity 0.8s;
   overflow-y: auto;
+  padding-right: 5px;
 
   &__inner {
     opacity: 1;
@@ -28,14 +29,15 @@
   &:hover::-webkit-scrollbar {
     display: block;
   }
-  &::-webkit-scrollbar {
-    width: 0px;
+
+  &:hover::-webkit-scrollbar-track {
+    background: $panel-background;
   }
 }
 
 @media screen and (max-width: 992px) {
   .panel {
-    z-index: 1;
+    z-index: 2;
     width: 0;
     visibility: hidden;
     min-width: 0;
